--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -1,10 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/mchnr2468/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mchnr2468/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/20/n11734454.md#1" target="_blank">谭笑飞：中共变异了整个社会</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/20/n11734454.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1280px-FuDanUni-150x120.jpg" align ="left"></a>1905年，马相伯先生创立了复旦公学（1917更名为复旦大学），这是中国人自主创办的第一所高等学府。“复旦”之名，源于《尚书大传·虞夏传》中的“日月光华，旦复旦兮”，其中含自强不息之意。近日，复旦大学修改章程，删除了“学术独立”、“思想自由”等字样，强化了“当的领导”。网友批评如潮，复旦大学师生高唱校歌表达抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:46 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/20/n11734241.md#1" target="_blank">常忍：法庭上的正义之声</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/20/n11734241.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_59193608_Subscription_L-600x400-150x120.jpg" align ="left"></a>明慧网报导，近期有位律师在法庭上为法轮功学员做无罪辩护，被法官多次打断和阻止。律师反问：“哪条规定不可做无罪辩护？”法官说：“国务院。”律师依照《律师法》、《刑事诉讼法》的相关规定，驳斥了法官的无理要求。律师指出，当事人是因为信仰法轮功而被抓，没有触犯任何法律，所以我要做的是无罪辩护。法庭内鸦雀无声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:01 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11733423.md#1" target="_blank">周晓辉：莱特希泽话中有话与高校章程变脸</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11733423.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1172509081-600x400-150x120.jpg" align ="left"></a>中共对全社会推行的强力控制，其实已经在向外界传递了一个明晰的信号，那就是在中共内部，改革派已在很多方面受挫，中共高层对外释放的都是“左转”、走回头路的信号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 4:48 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732234.md#1" target="_blank">东方觉：注水式统计与数字游戏</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732234.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/131faa4a41c267bb0e2416d0b6e5ea7a-150x120.jpg" align ="left"></a>已近年终，各级政府官员紧张忙碌起来，特别是反映政绩的总结报告和各类统计报表，最为重要，也最伤领导脑筋：报告内容如何添彩，统计数字如何注水，那可是大有“学问”、大有文章可作的。尤其那些统计数字，它关系到指标任务的完成、政绩的优劣与官位的升降变化，万万马虎不得。你可知道那“数字出官员，官员出数字”呢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 7:09 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732228.md#1" target="_blank">杨宁：美国严控签证 替中共效命者要三思</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732228.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-143452837-600x400-1-150x120.jpg" align ="left"></a>越来越多为中共效命者赴美被拒签，无疑是对那些仍忠心耿耿听从中共指令的官员、学者、媒体从业者、司法人员等的警示，也是在给他们机会三思。如果他们继续一条道紧跟着中共走到黑，那未来就不仅仅是签证被拒签那么简单了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 5:08 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11731652.md#1" target="_blank">【名家专栏】法学者们因个人敌意拥护弹劾</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11731652.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186479793-webcrop-1200x720-150x120.jpg" align ="left"></a>随着民主党控制的众议院弹劾川普（特朗普）总统行动的持续惨败，法学学者们也纷纷加入进来，各自选择了立场。最近，一个自称为法学者的团体发表了一封联名公开信，表示支持弹劾总统。然而，虽然这封信读起来相当有趣，但信中的证据均经不起考证，而信的起草者最终也得出了一个轻率而且不正确的结论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 3:50 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732082.md#1" target="_blank">岳高：圣诞节 寻平安</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732082.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/20180409-hsichiao-hk-01-150x120.jpg" align ="left"></a>又值岁末时节，象征世间除旧布新之际。终年奔波忙碌的人们，反省今年得失，对来年抱持期待与祝愿。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732146.md#1" target="_blank">骆克仁：哪来的“政治归政治、经济归经济”？</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732146.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/14be7aed9786d4aeffbdccbf7aaa1d86-150x120.png" align ="left"></a>这几天台湾朋友们转发的视频都是“波特王”，这个年轻俊朗的小伙子温情脉脉的搭讪台湾总统蔡英文。实话说，这样的画面有点让人“肉麻”，但作为娱乐不失趣味，也没降低品味。但就这样几乎没什么养分的“花边”视频，也碰碎了中共的“玻璃心”。
 
@@ -27,7 +21,12 @@
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728843.md#1" target="_blank">周晓辉：习近平再会林郑 不变与变透困境</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728843.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1189006322-600x400-1-150x120.jpg" align ="left"></a>据中共官媒报导，12月16日，习近平在中南海瀛台会见了来京述职的香港特别行政区行政长官林郑月娥，听取了她对香港当前形势和特别行政区政府工作情况的汇报。根据报导，习近平对外传递了三层意思：
 
 一、“充分肯定”林郑在过去一年中的工作以及显示出的“勇气和担当”，特别点出的是其“采取一系列政策措施扶助企业、纾缓民困，认真研.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 4:42 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/20/n11734313.md#1" target="_blank">阳剑：论共产党对中国家庭的毁坏</a><br></h3>家庭是社会细胞，家庭稳定富足则社会稳定富足，家庭动荡无伦则人心变异。特别是像中国这样讲究家庭系脉沿传文化的国度。中国传统文化讲父父子子，兄友弟恭，父严母慈子孝。不管是居家建筑还是礼节仪制，抑或是婚嫁丧娶，都讲究人伦次第，总则家庭和气、和谐则万事兴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:51 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728706.md#1" target="_blank">李靖宇：高以翔骤逝 曝大陆演艺圈“权力游戏”</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728706.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191126232934100707-600x400-150x120.jpg" align ="left"></a>当红台湾艺人高以翔11月27日拍摄浙江卫视《追我吧》节目时骤逝，12月16日举行告别式，年仅35岁，令人唏嘘不已。他录制《追我吧》17个小时后晕倒，送到医院急救时瞳孔已放大到边缘，完全错过黄金救援时间。尽管医院全力抢救了两个小时，但最后宣布高“突发心源性猝死”，噩耗令各界震惊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:12 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11727077.md#1" target="_blank">王友群：我为中美贸易协议点个“赞”</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11727077.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1126143684-600x400-2-150x120.jpg" align ="left"></a>12月13日，中美贸易第一阶段协议，总算达成了。
+
+目前，对这个协议，众说纷纭，莫衷一是。大多不太看好。我却认为，中美达成这个协议好，好在哪里？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 10:47 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11726911.md#1" target="_blank">洪达：祝贺神韵2020全球巡回演出</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11726911.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1901140106381973-600x400-150x120.jpg" align ="left"></a>在圣诞节即将来临之际，神韵艺术团将于十二月二十日展开二零二零年的全球巡回演出季之旅，预计覆盖约20个国家、近160个城市，演出场次七百余，规模为历年之最，逾百万人次观众将有幸欣赏“世界第一秀”的演出，共享丰盛的心灵飨宴。此全球艺文界的盛事佳话，深值庆贺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:48 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11726663.md#1" target="_blank">周晓辉：高调关注中共盗版仿制 俄补刀不简单</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11726663.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1506052148492039-600x400-150x120.jpg" align ="left"></a>中共的所作所为，连曾经在诸多问题上支持其的俄罗斯也看不下去了，中共联俄制美的算盘恐难以实现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732308.md#1" target="_blank">海网：南风吹起势燎原——有感于“光复茂名”模式重演</a><br></h3>征地名修生态园，
 实盖火葬殡仪馆。
 茂名民众反冒名，
@@ -82,5 +81,8 @@ x党专骗老百姓......<br><img align="bottom" src="http://www.epochtimes.com/assets
 还我香港民心凝
 正义自有苍天助
 共匪横行看报应......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:35 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11706337.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（9）</a><br></h3>一般把推理看作是“使用理智从某些前提产生结论”的行动。按照亚氏逻辑学的观点，前提和结论都是用判断或命题，推理是把判断或命题按照理智的方式连接起来。判断或命题是把词或概念用一些词（如关系词“BE”）连接起来。理智在亚氏逻辑学中，一般理解为符合理性行为公理，如不循环（传递性）、不矛盾（一致性）等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 10:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11727270.md#1" target="_blank">夏祷：愿荣光归台湾（下）?</a><br></h3>2014年，台湾、香港先后发生了太阳花运动和占中运动。学生们攻入立法院，坐上了议场主席台，在国父孙中山先生画像下高悬占领立法院的天数。太阳花学运最终促使台湾搁置了两岸服贸协议，延缓了中共企图通过贸易对台湾的深层渗透。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:35 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11727243.md#1" target="_blank">洪微：英超球星也遭中共封杀</a><br></h3>美国NBA被中共封杀的事件，余音还在，欧洲又起波澜，著名足球明星梅苏特·厄齐尔（Mesut ?zil）也遭到中共封杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mchnr2468/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/mchnr2468/djy/blob/master/gb/news392_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mchnr2468/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
